--- a/public/assets/css/styles.less
+++ b/public/assets/css/styles.less
@@ -32,3 +32,16 @@ body {
     margin: auto;
     margin-top: 20px;
 }
+
+.gecko-card {
+    border: solid 1px grey;
+    margin: 5px;
+    padding: 5px;
+
+}
+.female {
+    background: #ffe4e9;
+}
+.male {
+    background: #8db4ff;
+}
