added simple grid system; added more info (and geckos) to list for index.htm

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -34,8 +34,8 @@ body {
   padding: 5px;
 }
 .female {
-  background: #ffe4e9;
+  background: #dcc8c8;
 }
 .male {
-  background: #8db4ff;
+  background: #bed2dc;
 }
