--- a/public/assets/css/styles.less
+++ b/public/assets/css/styles.less
@@ -1,3 +1,7 @@
+/* Colors */
+@pink: rgb(220, 200, 200);  /* light rose color for female geckos */
+@blue: rgb(190, 210, 220;   /* light blue color for male geckos */
+
 body {
     background: white;
     font-family: Arial;
@@ -40,8 +44,8 @@ body {
 
 }
 .female {
-    background: #ffe4e9;
+    background: @pink;
 }
 .male {
-    background: #8db4ff;
+    background: @blue;
 }
