Added subtle background

--- a/public/assets/css/styles.less
+++ b/public/assets/css/styles.less
@@ -1,9 +1,11 @@
 /* Colors */
-@pink: rgb(220, 200, 200);  /* light rose color for female geckos */
-@blue: rgb(190, 210, 220;   /* light blue color for male geckos */
+@pink: rgba(220, 200, 200, 0.9);  /* light rose color for female geckos */
+@blue: rgba(190, 210, 220, 0.9);   /* light blue color for male geckos */
 
 body {
-    background: white;
+   // background: white;
+    background: url("../img/subtle_dots.png");
+    background-repeat: repeat;
     font-family: Arial;
     margin: 0;
 }
@@ -41,6 +43,7 @@ body {
     border: solid 1px grey;
     margin: 5px;
     padding: 5px;
+    background: rgba(255,255,255,0.9);
 
 }
 .female {
