--- a/public/assets/css/grid.css
+++ b/public/assets/css/grid.css
@@ -25,9 +25,13 @@
   clear: both;
 }
 /* Float all column classes */
-[class*='col-'] {
+[class*="col-"] {
   float: left;
   padding-right: 20px;
+}
+/* column 1/4 width of parent */
+.col-1-2 {
+  width: 50%;
 }
 /* column 1/3 width of parent */
 .col-1-3 {
