--- a/public/assets/css/grid.css
+++ b/public/assets/css/grid.css
@@ -25,17 +25,21 @@
   clear: both;
 }
 /* Float all column classes */
-[class*='col-'] {
+[class*="col-"] {
   float: left;
   padding-right: 20px;
 }
+/* column 1/4 width of parent */
+.col-1-2 {
+  width: 50%;
+}
 /* column 1/3 width of parent */
 .col-1-3 {
-  width: 33.33%;
+  width: 33%;
 }
 /* column 2/3 width of parent */
 .col-2-3 {
-  width: 66.66%;
+  width: 66%;
 }
 /* column 1/4 width of parent */
 .col-1-4 {
