Complete functions needed for gecko deletion

--- a/public/assets/css/styles.less
+++ b/public/assets/css/styles.less
@@ -19,6 +19,9 @@ body {
     margin: 0;
 }
 
+i {
+    padding: 5px;
+}
 .header {
     background: #222;
     color: white;
@@ -49,8 +52,8 @@ body {
 
 .gecko-card {
     border: solid 1px grey;
-    margin: 5px;
     padding: 5px;
+    margin: 5px;
     background: rgba(255, 255, 255, 0.9);
 }
 
