--- a/public/assets/css/grid.css
+++ b/public/assets/css/grid.css
@@ -27,7 +27,7 @@
 /* Float all column classes */
 [class*="col-"] {
   float: left;
-  padding-right: 20px;
+  padding-right: 10px;
 }
 /* column 1/4 width of parent */
 .col-1-2 {
@@ -44,4 +44,20 @@
 /* column 1/4 width of parent */
 .col-1-4 {
   width: 25%;
+}
+/* column 1/5 width of parent */
+.col-1-5 {
+  width: 20%;
+}
+/* column 1/6 width of parent */
+.col-1-6 {
+  width: 16%;
+}
+/* column 1/12 width of parent */
+.col-1-12 {
+  width: 9%;
+}
+/* align right */
+.right {
+  text-align: right;
 }
