--- a/public/assets/css/grid.less
+++ b/public/assets/css/grid.less
@@ -34,7 +34,7 @@
 
 [class*="col-"] {
     float: left;
-    padding-right: 20px;
+    padding-right: 10px;
 }
 
 
@@ -63,4 +63,26 @@
 
 .col-1-4 {
     width: 25%;
+}
+
+/* column 1/5 width of parent */
+.col-1-5 {
+    width: 20%;
+}
+
+/* column 1/6 width of parent */
+.col-1-6 {
+    width: 16%;
+}
+
+/* column 1/12 width of parent */
+.col-1-12 {
+    width: 9%;
+}
+
+
+
+/* align right */
+.right {
+    text-align: right;
 }
