Completed views setup. All working :)

--- a/public/views/AddGecko/AddGeckoTemplate.htm
+++ b/public/views/AddGecko/AddGeckoTemplate.htm
@@ -1,4 +1,8 @@
- <!-- ADD GECKO FORM -->
+<div class='navigation grid'>
+        <div class="col-1-2">{{statusMsg}}</div>
+        <div class="col-1-2 right"><a href="/">Go back</a></div>
+</div>
+<!-- ADD GECKO FORM -->
     <div ng-controller='AddGeckoController'>
 
         <form name="addGeckoForm" id="form">
