Added toastr, played with ngAnimate, fixed gecko.init to callback properly, added GeckoDataService, removed duplicate controller for GeckoList view

--- a/public/views/GeckoList/GeckoListTemplate.htm
+++ b/public/views/GeckoList/GeckoListTemplate.htm
@@ -1,5 +1,5 @@
 
-<div ng-controller='GeckoListController'>
+<div>
     <!-- HEADER STATUS BAR -->
     <div class='navigation grid'>
             <div class="col-1-2">{{statusMsg}}</div>
