Added toastr (and ngAnimate). Used npm to fetch and reference the new angular stuff. Implemented the geckoService. Fixed an issue with database init in gecko.js

--- a/public/assets/css/styles.less
+++ b/public/assets/css/styles.less
@@ -92,6 +92,7 @@ label {
     .col-1-4;
     float: left;
 }
+/*
 @keyframes slideInRight {
     from { transform: translateX(100%); opacity: 0; }
     to { transform: translateX(0); opacity: 1; }
@@ -106,3 +107,4 @@ label {
 .ng-leave {
     animation: slideOutLeft 0.1s both ease-in; z-index: 9999;
 }
+*/
