--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -133,26 +133,19 @@ label {
   width: 25%;
   float: left;
 }
+/*
 @keyframes slideInRight {
-  from {
-    transform: translateX(100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
+    from { transform: translateX(100%); opacity: 0; }
+    to { transform: translateX(0); opacity: 1; }
 }
 @keyframes slideOutLeft {
-  to {
-    transform: translateX(-100%);
-  }
+    to { transform: translateX(-100%); }
 }
+
 .ng-enter {
-  animation: slideInRight 0.1s both ease-in;
-  z-index: 8888;
+    animation: slideInRight 0.1s both ease-in; z-index: 8888;
 }
 .ng-leave {
-  animation: slideOutLeft 0.1s both ease-in;
-  z-index: 9999;
+    animation: slideOutLeft 0.1s both ease-in; z-index: 9999;
 }
+*/
