Moved some GeckoList view functionality into a new directive (GeckoTable). Wrote some tests for event functions in gecko-test.js

--- a/public/views/GeckoList/GeckoListTemplate.htm
+++ b/public/views/GeckoList/GeckoListTemplate.htm
@@ -69,6 +69,7 @@
     </div>
 
     <!-- CONTAINER FOR LIST OF GECKOS -->
+    <!--
     <div class='content'>
         <div ng-repeat='gecko in geckos' class="gecko-card grid" ng-class=gecko.sex>
             <div class="col-1-4">
@@ -93,4 +94,7 @@
             </div>
         </div>
     </div>
+    -->
+    
+    <gecko-table></gecko-table>
 </div>
