Cleaned up views and components, renamed views, added empty component directories for components that we might need, re-wired all angular script references to pull from node_modules

--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -1,5 +1,5 @@
 <!-- CONTAINER FOR GECKO INFORMATION -->
-<div ng-controller='GeckoDetailController'>
+<div>
     <div class='navigation grid'>
         <div class="col-1-2">{{statusMsg}}</div>
     </div>
