--- a/public/views/DashboardView/DashboardViewTemplate.htm
+++ b/public/views/DashboardView/DashboardViewTemplate.htm
@@ -9,7 +9,9 @@
             </a>
         </div>
     </div>
+
     <!-- ADD GECKO FORM -->
+    <!-- KENNY: This should be moved into a directive. -->
     <div ng-controller='AddGeckoController' ng-show='showForm'>
 
         <form name="addGeckoForm" id="form">
@@ -67,34 +69,6 @@
             <button ng-click="submitForm()">Add Gecko</button>
         </form>
     </div>
-
-    <!-- CONTAINER FOR LIST OF GECKOS -->
-    <!--
-    <div class='content'>
-        <div ng-repeat='gecko in geckos' class="gecko-card grid" ng-class=gecko.sex>
-            <div class="col-1-4">
-                <i class='fa fa-mars' ng-if="gecko.sex == 'male'"></i>
-                <i class='fa fa-venus' ng-if="gecko.sex == 'female'"></i>
-                <strong>{{gecko.name}}</strong>
-            </div>
-            <div class="col-1-4">
-                Morph: {{gecko.morph}}
-            </div>
-            <div class="col-1-4">
-                Location: {{gecko.location}}
-            </div>
-            <div class="col-1-6">
-                Status: {{gecko.status}}
-            </div>
-            <div class="col-1-12 right">
-                <a href="/geckos/{{gecko._id}}">
-                    <i class='fa fa-expand'></i>
-                </a>
-                <i class='fa fa-trash' ng-click="confirmDelete(gecko._id, gecko.name)"></i>
-            </div>
-        </div>
-    </div>
-    -->
     
     <gecko-table></gecko-table>
 </div>
