changed uniqueID to userId

--- a/public/views/DashboardView/DashboardViewTemplate.htm
+++ b/public/views/DashboardView/DashboardViewTemplate.htm
@@ -40,7 +40,7 @@
                 </div>
                 <div class="form-element">
                     <label>ID</label>
-                    <input type="text" placeholder="ex. 16M24" ng-model="form.uniqueID">
+                    <input type="text" placeholder="ex. 16M24" ng-model="form.userID">
                 </div>
                 <div class="form-element">
                     <label>Location</label>
