Commented out expiremental directives

--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -44,5 +44,5 @@
         </div>
     </div>
     
-    <events-table gecko-id="{{geckoDetail._id}}"></events-table>
+   <!-- <events-table gecko-id="{{geckoDetail._id}}"></events-table> -->
 </div>
