--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -187,9 +187,22 @@ label {
   height: 26px;
 }
 .events-table .add-gecko-event-form button {
-  padding: 10px;
+  padding: 8px 10px;
+  margin-top: 12px;
+}
+.events-table .add-gecko-event-form input[type=number] {
+  width: 50px;
+}
+.events-table .add-gecko-event-form input[type=date] {
+  padding: 2px;
+}
+.events-table .add-gecko-event-form .note {
+  width: 100%;
 }
 .events-table .add-gecko-event-form .field {
+  font-size: 12px;
   margin: 10px;
-  display: flex;
+}
+.events-table .add-gecko-event-form .field label {
+  display: block;
 }
