--- a/public/assets/css/styles.less
+++ b/public/assets/css/styles.less
@@ -151,7 +151,8 @@ label {
         }
         
         button {
-            padding: 10px;   
+            padding: 8px 10px;
+            margin-top: 12px;
         }
         
         //input[type='text'] {
@@ -159,9 +160,24 @@ label {
         //    border-bottom: solid 1px #00c000;
         //}
         
+        input[type=number] {
+            width: 50px;
+        }
+        
+        input[type=date] {
+            padding: 2px;
+        }
+        
+        .note {
+            width: 100%;
+        }
+        
         .field {
+            label {
+                display: block;
+            }
+            font-size: 12px;
             margin: 10px;
-            display: flex;
         }
     }
 }
