--- a/public/assets/css/styles.less
+++ b/public/assets/css/styles.less
@@ -133,6 +133,7 @@ label {
             border-bottom: solid 1px #e7e7e7;
             height: 36px;
             padding-left: 16px;
+            background: transparent;
         }
         td {
             height: 36px;
@@ -140,6 +141,15 @@ label {
             font-size: 14px;
             padding-left: 16px;
         }
+        tr {
+        }
+        tr:hover td {
+            background: #f0f0f0;
+        }
+
+        th:nth-child(1) { width: 180px; }
+        th:nth-child(2) { width: 100px; }
+        th:nth-child(3) { width: 200px; }
     }
     
     .add-gecko-event-form {
@@ -148,11 +158,32 @@ label {
         
         select {
             height: 26px;
+            border: 0;
+            outline: none;
+            padding-bottom: 1px;
+            &:hover {
+                padding-bottom: 0;
+                border-bottom: solid 2px lighten(#00c000, 50%);
+            }
+            &:focus {
+                padding-bottom: 0;
+                border-bottom: solid 2px #00c000;
+            }
         }
         
         button {
             padding: 8px 10px;
             margin-top: 12px;
+            background: #00c000;
+            font-weight: bold;
+            color: white;
+            border: 0;
+            border-radius: 2px;
+            box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+            cursor: pointer;
+            &:hover {
+                background: #00d000;
+            }
         }
         
         //input[type='text'] {
@@ -162,10 +193,38 @@ label {
         
         input[type=number] {
             width: 50px;
+            border: 0;
+            outline: none;
+            &:hover {
+                border-bottom: solid 2px lighten(#00c000, 50%);
+            }
+            &:focus {
+                border-bottom: solid 2px #00c000;
+            }
         }
         
         input[type=date] {
             padding: 2px;
+            font-family: Arial;
+            border: 0;
+            outline: none;
+            &:hover {
+                border-bottom: solid 2px lighten(#00c000, 50%);
+            }
+            &:focus {
+                border-bottom: solid 2px #00c000;
+            }
+        }
+        
+        input[type=text] {
+            border: 0;
+            outline: none;
+            &:hover {
+                border-bottom: solid 2px lighten(#00c000, 50%);
+            }
+            &:focus {
+                border-bottom: solid 2px #00c000;
+            }
         }
         
         .note {
@@ -179,6 +238,7 @@ label {
             font-size: 12px;
             margin: 10px;
         }
+        
     }
 }
 
