More CSS cleaning.

--- a/public/assets/css/layout/_l-grid.less
+++ b/public/assets/css/layout/_l-grid.less
@@ -1,6 +1,6 @@
 /*
 |--------------------------------------------------------------------------
-| grid.less/css
+| grid.less
 |--------------------------------------------------------------------------
 | Mini grid system for easy alignment of content.
 |
