Brackets Auto-Compile extenstion has bug; doesn't ignore files that start with underscore.  Added config  so only index.less is compiled.

--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -1,5 +1,7 @@
+@import "base/_b-base.less";
 @import "base/_b-colors.less";
-@import "base/_b-styles.less";
+@import "base/_b-elements.less";
+
 @import "layout/_l-grid.less";
 @import "modules/_font-awesome.less";
 
