More CSS organizing

--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -1,8 +1,14 @@
+@import "base/_b-animations.less";
 @import "base/_b-base.less";
 @import "base/_b-colors.less";
 @import "base/_b-elements.less";
+@import "base/_b-text.less";
 
 @import "layout/_l-grid.less";
-@import "modules/_font-awesome.less";
+@import "layout/_l-layout.less";
+@import "lib/_font-awesome.less";
 
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,700i,800';
+@import "modules/_event-table.less";
+@import "modules/_gecko.less";
+@import "modules/_header.less";
+
