--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -1,6 +1,6 @@
 <!-- CONTAINER FOR GECKO INFORMATION -->
 <div>
-    <div class='navigation grid'>
+    <div class='status-bar'>
         <div class="col-1-2">{{statusMsg}}</div>
     </div>
 <gecko-detail gecko-id="geckoDetail._id"></gecko-detail>
