--- a/public/assets/css/base/_b-base.less
+++ b/public/assets/css/base/_b-base.less
@@ -1,10 +1,18 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
+
+
 body {
     background: url("../img/subtle_dots.png"), white;
     background-repeat: repeat;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
 }
 
-a {
+a, a:visited {
     text-decoration: none;
+    color:inherit;
+}
+
+a:hover:not(.link--card), .link:hover{
+    color: @accentColor;
 }
